<resources>
    <string name="facebook_app_id">841446575941953</string>
    <string name="btn_en">English</string>
    <string name="btn_ar">Arabic</string>
    <string name="TG_statuspending">Pending</string>
    <string name="TG_status_confirmed">Confirmed</string>
    <string name="TG_status_cancel">Cancelled</string>
    <string name="TG_status_cancel_by_user">Cancelled By User</string>
    <string name="tgrawfile_finish">Finish</string>
    <string name="OO_statusWaiting">Waiting</string>
    <string name="oorawfile_coo">Confirmed Order</string>
    <string name="oorawfile_cancelorder">Cancel Order</string>
    <string name="app_name">Restaurant Finder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Blank">Blank</string>
    <string name="spl_Username">USERNAME</string>
    <string name="spl_Password">PASSWORD</string>
    <string name="spl_Login">LOGIN</string>
    <string name="spl_Register">REGISTER</string>
    <string name="spl_Or">OR</string>
    <string name="spl_FORGET_PASSWORD">FORGOT YOUR PASSWORD</string>
    <string name="admin_rest_registration_link"><u>Restaurant Join Us</u></string>
    <string name="FORGET_PASSWORD">RESET PASSWORD</string>
    <string name="EMAIL">Email</string>
    <string name="Login">Login</string>
    <string name="Indine">In Dine</string>
    <string name="Search">SEARCH</string>
    <string name="Select_City">SELECT CITY</string>
    <string name="Select_FR_Region">SELECT REGION</string>
    <string name="Delivery_Areas">DELIVERY AREAS</string>
    <string name="find_restaurant">FIND RESTAURANT</string>
    <string name="No_Restaurant">Oops We Can\'t Find Any Restaurant Near You !</string>
    <string name="No_Order_Details">Oops This restaurant does not provide any facility. !</string>
    <string name="No_Fav_Restaurant">Oops We Can\'t Find Any Restaurant !</string>
    <string name="No_Gallery">Oops We Can\'t Find Any Images !</string>
    <string name="No_abt_restaurant">Oops We Can\'t Find Any Details. !</string>
    <string name="No_Internet_Connection">No Internet Connection</string>
    <string name="Register">REGISTER</string>
    <string name="Update_profile">PROFILE</string>
    <string name="Update">UPDATE</string>
    <string name="first_name">Firstname</string>
    <string name="Lastname">Lastname</string>
    <string name="Username">Username</string>
    <string name="Emial">Email</string>
    <string name="Password">Password</string>
    <string name="Repeat_Password">Repeat Password</string>
    <string name="House_Number">House Number</string>
    <string name="Street">Street</string>
    <string name="Select_Region">Select Region</string>
    <string name="select">Select</string>
    <string name="Cancel">Cancel</string>
    <string name="Register_Select_City">Select City</string>
    <string name="Select_District">Select City</string>
    <string name="No_District">No City Available</string>
    <string name="Mobile_Number">  Mobile Number</string>
    <string name="mobile_code">+996</string>
    <string name="No_City">No Cities Available</string>
    <string name="check_box_text"> I Have Read and Accept the Terms and Condition and Privacy</string>
    <string-array name="select_region">
        <item>Western</item>
        <item>central</item>
        <item>North</item>
    </string-array>
    <string name="Restaurant">RESTAURANT</string>
    <string name="Search_Restaurant">SEARCH RESTAURANT</string>
    <string name="sort_by">Sort by :</string>
    <string name="Name">Name</string>
    <string name="Newest">Newest</string>
    <string name="Top_rated">Top Rated</string>
    <string name="search_hint">Search Query</string>
    <string name="delivery_option">Delivery Option</string>
    <string name="Categories">Categories</string>
    <string name="Minimum_Time_Order">Minimum Time To Order</string>
    <string-array name="Delivery_Option">
        <item>All</item>
        <item>Pickup</item>
        <item>Delivery</item>
    </string-array>
    <string-array name="Minimum_Order_Time_Array">
        <item>Within 1 Day</item>
        <item>1 Day Before</item>
        <item>2 Day Before</item>
        <item>3 Day Before</item>
        <item>4 Day Before</item>
        <item>5 Day Before</item>
        <item>6 Day Before</item>
        <item>7 Day Before</item>
    </string-array>
    <string name="Restaurant_name">Hotel Name</string>
    <string name="order_time">Order time</string>
    <string name="order_address">Order Address</string>
    <string name="Pickup">Pickup</string>
    <string name="Delivery">Delivery</string>
    <string name="Review">REVIEWS</string>
    <string name="Ratings">RATINGS</string>
    <string name="Sweet_spicy">Sweet/Spicy</string>
    <string name="Types_of_food">Type of Food</string>
    <string name="Header_Categories">CATEGORIES</string>
    <string name="boarder_line">-</string>
    <string name="Service">Service</string>
    <string name="CustomerService">Customer Services</string>
    <string name="Food">Food</string>
    <string name="Cleanliness">Cleanliness</string>
    <string name="Quality">Quality</string>
    <string name="Price">Price</string>
    <string name="horizontal_line">|</string>
    <string name="Notes">Notes : </string>
    <string name="Notes_detail">There is no notes to show</string>
    <string name="Minimum_Order">Minimum Order : </string>
    <string name="Minimum_Order_details">Minimum Order lei 150 is Required.</string>
    <string name="Minimum_time_to_Order">Minimum Time To Order : </string>
    <string name="Minimum_time_to_Order_details">Order 2 Days Before</string>
    <string name="categories_textview">Categories_Text</string>
    <string name="Search_edittext_hint">SEARCH</string>
    <string name="Food_Categories_Name">Food Categories Name</string>
    <string name="Food_Categories_size">Small Size</string>
    <string name="Food_Categories_Quantity_Details">One Piece 4 lei.</string>
    <string name="Food_Categories_Spicy_Level">Spicy Level</string>
    <string-array name="Spicy_Level">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="SR">lei 960</string>
    <string name="plus">+</string>
    <string name="quantity">0</string>
    <string name="minus">-</string>
    <string name="spicy_level">Spicy Level</string>
    <string name="title_activity_my_application">MyApplication</string>
    <string name="checkout">CHECKOUT</string>
    <string name="checkout_Delivery">Delivery</string>
    <string name="checkout_Payment">Payment</string>
    <string name="checkout_Payment_header">PAYMENT</string>
    <string name="checkout_Reciept_header">RECEIPT</string>
    <string name="checkout_ContactDetails">Contact Details</string>
    <string name="checkout_Reciept">Receipt</string>
    <string name="checkout_city">Select City</string>
    <string name="checkout_district">Select City</string>
    <string name="checkout_zipcode">Zip code(Optional)</string>
    <string name="checkout_shipping_information">Shipping information</string>
    <string name="checkout_title_shipping_information">SHIPPING INFORMATION</string>
    <string name="checkout_pick_myself">I will pick up my self</string>
    <string name="checkout_saved_address">Use Saved Address</string>
    <string name="checkout_pont_location">Point Your Location on map for accuracy and Faster delivery?</string>
    <string name="payment_Delivery_charge">Delivery Charge :</string>
    <string name="payment_Sr">lei 0</string>
    <string name="payment_Total">Total :</string>
    <string name="payment_Offer">Best Offer For You</string>
    <string name="payment_test_Offer">Test Offer</string>
    <string name="payment_Offer_discount">10%</string>
    <string name="payment_Offer_apply">Apply</string>
    <string name="payment_Method">Please Select Payment Method</string>
    <string name="payment_Method_select">Cash on Delivery</string>
    <string name="payment_Continue_to_next">Continue to Next Step</string>
    <string name="payment_Offer_discount_order">Discount On Order</string>
    <string name="payment_rawfile_index">1.</string>
    <string name="payment_rawfile_item_name">Chicken Noodle Soup</string>
    <string name="payment_rawfile_item_quantity">4</string>
    <string name="payment_rawfile_item_SR">lei 300</string>
    <string name="payment_Offer_discount_details">One Piece 4 lei.The order no earlier than 24 Pieces</string>
    <string name="receipt_invoice">INVOICE</string>
    <string name="receipt_pay_invoice">Pay Invoice</string>
    <string name="my_booked_cart">My Cart</string>
    <string name="receipt_customer_name">Customer Name</string>
    <string name="receipt_Date">November 12,2014</string>
    <string name="receipt_Email">Email :</string>
    <string name="receipt_customer_Email">jtt.meghraj@gmail.com</string>
    <string name="receipt_Contact_no">Contact Number :</string>
    <string name="receipt_Payment_status_title">Status :</string>
    <string name="receipt_Payment_status">Waiting(Cash on Delivery)</string>
    <string name="receipt_customerContact_no">123456789</string>
    <string name="receipt_items_name">Items Name</string>
    <string name="receipt_items_qty">QTY</string>
    <string name="receipt_items_price">Price</string>
    <string name="receipt_items_total">Total</string>
    <string name="receipt_thanks">Thank You For Buying Our Products.</string>
    <string name="receipt_customer_address">Test house test street Jeddah
                                            Al Sala Jeddah western Saudi Arabia(1234)</string>
    <string name="tab_Contact_Details">Contact Details</string>
    <string name="tab_Payment">Payment</string>
    <string name="tab_Reciept">Receipt</string>
    <string name="checkout_mobile_verify">You have to Verify your contact details and order number to pick up this order</string>
    <string name="checkout_used_saved_address">test house
                                                  test street
                                                  Al Bawadi,Jeddah(western)
                                                  Saudi Arabia</string>
    <string name="contact_firstname">First Name</string>
    <string name="contact_lastname">Last Name</string>
    <string name="contact_email">Email</string>
    <string name="contact_mobile">Mobile</string>
    <string name="contact_Comments">Comments</string>
    <string name="contact_details_title">CONTACT DETAILS</string>
    <string name="contact_details_delivery_date">DELIVERY DATE</string>
    <string name="contact_details_delivery_select_DATE">Select Date</string>
    <string name="contact_details_delivery_TIME">DELIVERY TIME</string>
    <string name="contact_details_delivery_select_TIME">Select Time</string>
    <string name="restaurant_closed">Restaurant is closed on this day.</string>
    <string name="total">Total</string>
    <string name="sr_total">lei  TOTAL</string>
    <string name="sr_total_value">10</string>
    <string name="sr_multiplication">x</string>
    <string name="confirm_order"><u>Confirm Order</u></string>
    <string name="cancel_order"><u>Cancel Order</u></string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="blank_city">City cannot be blank.</string>
    <string name="blank_district">City cannot be blank.</string>
    <string name="blank_house_number">House Number cannot be blank.</string>
    <string name="blank_street">Street cannot be blank.</string>
    <string name="my_booking">My Booking</string>
    <string name="my_profile">My Profile</string>
    <string name="my_favourites">My Favourites</string>
    <string name="my_networking">Networking</string>
    <string name="about_restaurant">About Restaurant</string>
    <string name="logout">Logout</string>
</resources>