<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:weightSum="8" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <!-- <ImageView -->
        <!-- android:id="@+id/imageView3" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:src="@drawable/password" -->
        <!-- android:visibility="invisible" /> -->


        <!-- </LinearLayout> -->
        <!-- <LinearLayout -->
        <!-- android:layout_width="match_parent" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:gravity="center" -->
        <!-- android:orientation="vertical" -->
        <!-- android:layout_weight="1" -->
        <!-- android:layout_marginLeft="30dp" -->
        <!-- android:layout_marginRight="30dp" -->
        <!-- > -->


        <!-- <ImageView -->
        <!-- android:id="@+id/imageView3" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:src="@drawable/password" -->
        <!-- android:visibility="invisible" /> -->


        <!-- </LinearLayout> -->
        <!-- <LinearLayout -->
        <!-- android:layout_width="match_parent" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:gravity="center" -->
        <!-- android:orientation="vertical" -->
        <!-- android:layout_weight="1" -->
        <!-- android:layout_marginLeft="30dp" -->
        <!-- android:layout_marginRight="30dp" -->
        <!-- > -->


        <!-- <ImageView -->
        <!-- android:id="@+id/imageView3" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:src="@drawable/password" -->
        <!-- android:visibility="invisible" /> -->


        <!-- </LinearLayout> -->
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/Select_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Select_FR_Region"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="#162880"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/Select_region_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/password"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:text="@string/Select_Region"
                android:clickable="false"
                android:textColor="#ffffff"
                android:textAppearance="?android:attr/textAppearanceMedium" >

                <requestFocus />
            </TextView>
        </LinearLayout>
        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/Select_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Select_City"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="#162880"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/Select_city_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/password"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:clickable="false"
                android:textColor="#ffffff"
                android:text="@string/Register_Select_City"
                android:textAppearance="?android:attr/textAppearanceMedium" >

                <requestFocus />
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/find_restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login"
                android:gravity="center"
                android:text="@string/find_restaurant"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/Delivery_areas_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Delivery_Areas"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/delivery_area_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/password"
                android:gravity="left|center"
                android:inputType="textPersonName"
                android:padding="3dp"
                android:textAppearance="?android:attr/textAppearanceMedium" >

                <requestFocus />
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/line_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:contentDescription="@string/Blank"
                android:src="@drawable/line" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>